# c_tasks

./: CMakeLists.txt  README.md  allocator.cpp  allocator.h  allocator_test.cpp  demo.c  format.cpp  format.h  main.c  main1.c  rational.cpp  rational.h
allocator/: allocator.cpp  allocator_test.cpp
task0/: lazy_string.cpp  lazy_string.h  main.cpp
task1/: main.c
task2/: main.c
task3/: CMakeLists.txt  rational.cpp  rational.h
task4/: CMakeLists.txt  format.cpp  format.h  test.cpp
task5/: format.cpp  format.h  test  test.cpp
task6/: CMakeLists.txt  build.bat  lazy_string.cpp  lazy_string.h  lazy_string_test.cpp  main.cpp  main.out  output.txt
task6/test/: lazy_string_test.cpp
task7/: CMakeLists.txt  build.bat  lazy_string.cpp  lazy_string.h  main.cpp  main.out  output.txt  run.bat
task7/demo/: demo.cpp  lazy_string.cpp  lazy_string.h  main.cpp  streams.cpp
task7/test/: demo.cpp  lazy_string.h  output.txt
